# academic

./: .gitignore  .pre-commit-config.yaml  404.html  Justfile  Makefile  README.md  index.html  index.json  index.xml  justfile  manifest.webmanifest  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml  tags.json
.github/workflows/: gh-pages.yml
blog/: index.html
blog/week#5/: index.html
blog/week#6/: index.html
blog/week#7/: index.html
categories/: index.html  index.xml
category/demo/: index.html  index.xml
category/教程/: index.html  index.xml
cheat-sheets/: index.html
cheat-sheets/conda/: index.html
cheat-sheets/git-github/: index.html
config/_default/: config.yaml  menus.yaml  params.yaml
content/home/: contact.md  projects.md  publications.md  teaching.md
content/projects/: _index.md
dev/: mlp.py
dev-guide/clean-code/: index.html
dev-guide/project_structure/: index.html
docs/: index.md
docs/blog/: .authors.yml  index.md  week#5.md
docs/cheat-sheets/: conda.md  git-github.md  index.md
docs/dev-guide/: project_structure.md
docs/user-guide/: clean_code.md  getting_started.md
event/: index.html  index.xml
post/: index.html  index.xml
post/getting-started/: index.html
project/: index.html  index.xml
project/example/: index.html
projects/: index.html  index.xml
projects/20222023_factorization_machines/: index.html
publication/: index.html  index.xml
publication_types/: index.html  index.xml
search/: search_index.json
slides/: index.xml
tags/: index.html  index.xml
teaching/: index.html  index.xml
(+223 files in other folders)
